# pg_freezer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yaml
helm/pg-freezer/: Chart.yaml  values.yaml
helm/pg-freezer/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml  serviceaccount.yaml
scripts/: config.dev.yaml  generate.py
src/pg_freezer/: __init__.py  cli.py  config.py  engine.py  errors.py  exporter.py  manifest.py  notify.py  partition.py  storage.py
tests/: test_config.py  test_delete.py  test_engine.py  test_exporter.py  test_manifest.py  test_partition.py
