[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_freezer"]

[project]
name = "pg-freezer"
version = "1.0.5"
description = "Archive PostgreSQL timeseries tables to Parquet on S3-compatible storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "pyarrow>=15.0",
    "fsspec>=2024.2",
    "s3fs>=2024.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.scripts]
pg-freezer = "pg_freezer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "duckdb>=0.10",
    "pytest-cov>=5.0",
    "python-semantic-release>=9.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "duckdb>=0.10",
    "pytest-cov>=5.0",
    "python-semantic-release>=10.5.3",
]



[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

build_command = """
    uv lock --upgrade-package "$PACKAGENAME"
    git add uv.lock
    uv build
"""

branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
commit_parser = "conventional"

upload_to_release = false
upload_to_pypi = false
commit_version_number = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "up"]
parse_squash_commits = true
ignore_merge_commits = true

